[tool.poetry]
name = "boots"
version = "0.1.0"
description = "A tiny statistical bootstraping library."
authors = ["Peter Baumgartner <5107405+pmbaumgartner@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "boots", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
vose = {git = "https://github.com/MaxHalford/vose.git", rev = "a72ee6540c0d5b21158340d377ca5f11dc5ffb67"}
joblib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
black = "^22.10.0"
pytest = "^7.2.0"
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
